:sparkles: Complete user base endpoints
