# src/controllers/users.ts
@@ -3,10 +3,27 @@ import { Request, Response } from "express";
 import bcrypt from "bcrypt";
 import { StatusCodes } from "http-status-codes";
 import { generateAccessToken } from "../utils/jwt";
-import { createInstance, getAll, getOne } from "../dto";
-import { UserCreateAccessToken, UserCreateRequest, UserDetail } from "../types/schemas/user.response";
+import { createInstance, getAll, getOne, updateInstance } from "../dto";
+import {
+  UserCreateAccessToken,
+  UserCreateRequest,
+  UserDetail,
+  UserUpdateRequest,
+} from "../types/schemas/user.response";
 import { User } from "../models/users";
 import { NoContent } from "../types/schemas/base.response";
+import { usersEmailIsExist } from "../services/users";
+
+const getUserById = async (userId: string): Promise<any> => {
+  return await getOne(User, {
+    where: {
+      id: [userId],
+    },
+    attributes: {
+      exclude: ["password"],
+    },
+  });
+};
 
 @Route("api/users")
 @Tags("users")
@@ -26,24 +43,17 @@ export class userSchemaController extends Controller {
 
   @Get("{userId}")
   public static async getOne(@Path() userId: string): Promise<UserDetail> {
-    return await getOne(User, {
-      where: {
-        id: [userId],
-      },
-      attributes: {
-        exclude: ["password"],
-      },
-    });
+    return await getUserById(userId);
   }
 
   @Patch("{userId}")
-  public static async update(@Path() userId: string) {
-    return { userId: userId };
+  public static async update(@Path() userId: string, @Body() payload: UserUpdateRequest): Promise<UserDetail> {
+    return await getUserById(userId);
   }
 
   @Delete("{userId}")
   public static async delete(@Path() userId: string): Promise<NoContent> {
-    const user = await getOne(User, { where: { id: userId } });
+    const user = await getUserById(userId);
     user && (await user.destroy());
     return { delete: "success" };
   }
@@ -67,14 +77,21 @@ export const userController = {
   getOne: async (req: Request, res: Response) => {
     const { userId } = req.params;
     const user = await userSchemaController.getOne(userId);
+    if (user) {
+      res.json(user);
+    } else res.status(StatusCodes.NOT_FOUND).json({ detail: "User with this ID not found" });
+  },
+
+  update: async (req: Request, res: Response) => {
+    const user = await getUserById(req.params.userId);
+    if (req?.body?.email && (await usersEmailIsExist(req?.body?.email))) {
+      return res.status(StatusCodes.BAD_REQUEST).json({ message: "E-mail already in use" });
+    }
+    await updateInstance(user, req.body);
     if (!!user) {
       res.json(user);
     }
     return res.status(StatusCodes.NOT_FOUND);
-  },
-
-  update: async (req: Request, res: Response) => {
-    await userSchemaController.update("1");
   },
 
   delete: async (req: Request, res: Response) => {
